--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,46 @@
 </head>
 
 <body>
+<header class="shadow-sm bg-green-700">
+    <div class="navbar container mx-auto">
+        <div class="navbar-start">
+            <div class="dropdown">
+                <div tabindex="0" role="button" class="btn btn-ghost lg:hidden text-white">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M4 6h16M4 12h8m-8 6h16" />
+                    </svg>
+                </div>
+                <ul tabindex="0"
+                    class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                    <li><a class="cursor-pointer font-semibold">About</a></li>
+                    <li><a class="cursor-pointer font-semibold">Gallery</a></li>
+                    <li><a class="cursor-pointer font-semibold">Plant a Tree</a></li>
+                </ul>
+            </div>
+            <a href="#" class="text-xl text-white font-bold ml-2">Green Earth</a>
+        </div>
+        <div class="navbar-center hidden lg:flex">
+            <ul class="flex gap-4 menu-horizontal px-1 text-white">
+                <li>
+                    <a class="cursor-pointer font-semibold hover:underline">About</a>
+                </li>
+                <li>
+                    <a class="cursor-pointer font-semibold hover:underline">Gallery</a>
+                </li>
+                <li>
+                    <a class="cursor-pointer font-semibold hover:underline">Plant a Tree</a>
+                </li>
+            </ul>
+        </div>
+        <div class="navbar-end">
+            <a class="btn btn-warning text-green-600 rounded-full">Plant a Tree</a>
+        </div>
+    </div>
+</header>
 
+<script src="javaScript/main.js"></script>
 </body>
 
 </html>
