--- a/index.htm
+++ b/index.htm
@@ -11,46 +11,164 @@
 </head>
 
 <body>
-<header class="shadow-sm bg-green-700">
-    <div class="navbar container mx-auto">
-        <div class="navbar-start">
-            <div class="dropdown">
-                <div tabindex="0" role="button" class="btn btn-ghost lg:hidden text-white">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
-                        stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M4 6h16M4 12h8m-8 6h16" />
-                    </svg>
+    <header class="shadow-sm bg-green-700">
+        <div class="navbar container mx-auto">
+            <div class="navbar-start">
+                <div class="dropdown">
+                    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden text-white">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M4 6h16M4 12h8m-8 6h16" />
+                        </svg>
+                    </div>
+                    <ul tabindex="0"
+                        class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                        <li><a class="cursor-pointer font-semibold">About</a></li>
+                        <li><a class="cursor-pointer font-semibold">Gallery</a></li>
+                        <li><a class="cursor-pointer font-semibold">Plant a Tree</a></li>
+                    </ul>
                 </div>
-                <ul tabindex="0"
-                    class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-                    <li><a class="cursor-pointer font-semibold">About</a></li>
-                    <li><a class="cursor-pointer font-semibold">Gallery</a></li>
-                    <li><a class="cursor-pointer font-semibold">Plant a Tree</a></li>
+                <a href="#" class="text-xl text-white font-bold ml-2">Green Earth</a>
+            </div>
+            <div class="navbar-center hidden lg:flex">
+                <ul class="flex gap-4 menu-horizontal px-1 text-white">
+                    <li>
+                        <a class="cursor-pointer font-semibold hover:underline">About</a>
+                    </li>
+                    <li>
+                        <a class="cursor-pointer font-semibold hover:underline">Gallery</a>
+                    </li>
+                    <li>
+                        <a class="cursor-pointer font-semibold hover:underline">Plant a Tree</a>
+                    </li>
                 </ul>
             </div>
-            <a href="#" class="text-xl text-white font-bold ml-2">Green Earth</a>
+            <div class="navbar-end">
+                <a class="btn btn-warning text-green-600 rounded-full">Plant a Tree</a>
+            </div>
         </div>
-        <div class="navbar-center hidden lg:flex">
-            <ul class="flex gap-4 menu-horizontal px-1 text-white">
-                <li>
-                    <a class="cursor-pointer font-semibold hover:underline">About</a>
-                </li>
-                <li>
-                    <a class="cursor-pointer font-semibold hover:underline">Gallery</a>
-                </li>
-                <li>
-                    <a class="cursor-pointer font-semibold hover:underline">Plant a Tree</a>
-                </li>
-            </ul>
+    </header>
+    <main class="bg-green-100 py-10 md:py-0">
+        <div class="container mx-auto flex justify-between items-center px-4 md:px-0 py-5 lg:py-0">
+            <figure class="hidden lg:flex">
+                <img src="assets/hero-leaf1.png" alt="" />
+            </figure>
+            <div class="text-center space-y-5">
+                <h1 class="text-3xl md:text-4xl font-bold">
+                    Plant a Tree, Grow a Future
+                </h1>
+                <p>
+                    Join our mission to plant 1 million trees and make the Earth greener
+                    for future generations.
+                </p>
+                <a class="btn btn-warning text-green-600 rounded-full">Get Involved</a>
+            </div>
+            <figure class="hidden lg:flex">
+                <img src="assets/hero-leaf2.png" alt="" />
+            </figure>
         </div>
-        <div class="navbar-end">
-            <a class="btn btn-warning text-green-600 rounded-full">Plant a Tree</a>
-        </div>
-    </div>
-</header>
+    </main>
 
-<script src="javaScript/main.js"></script>
+    <div class="" id="modal-container"></div>
+    <section class="bg-green-50 py-20">
+      <h1 class="text-3xl font-bold text-center mb-10">Choose Your Trees</h1>
+      <div class="grid grid-cols-12 container mx-auto px-4 md:px-2">
+        <div class="col-span-12 lg:col-span-2 mb-8 lg:mb-0">
+          <div class="sticky top-10">
+            <h1 class="text-xl px-2 font-bold">Categories</h1>
+            <div class="px-2 py-5">
+              <i
+                class="ri-menu-2-line lg:hidden cursor-pointer text-2xl"
+                id="toggle-btn"
+              ></i>
+            </div>
+            <div class="mt-2">
+              <ul
+                class="space-y-3 px-2 hidden lg:block"
+                id="category-container"
+              ></ul>
+            </div>
+          </div>
+        </div>
+        <div class="lg:col-span-8 col-span-12">
+          <div class="col-span-4 justify-center hidden" id="loader">
+            <span
+              class="loading loading-dots text-green-700 w-15 h-15 mx-auto"
+            ></span>
+          </div>
+          <div
+            class="grid xl:grid-cols-3 md:grid-cols-2 grid-cols-1 p-2 gap-4"
+            id="post-container"
+          ></div>
+        </div>
+        <div class="col-span-12 lg:col-span-2 mt-8 lg:mt-0">
+          <div class="sticky top-10 h-fit bg-white/50 rounded-md py-4">
+            <h1 class="text-xl font-bold px-3">Your Cart</h1>
+            <div class="py-5 space-y-4" id="cart-container"></div>
+            <h1 class="font-bold text-lg px-3">
+              Total : ৳
+              <span id="total-price" class="font-bold text-lg text-black-600"
+                >0</span
+              >
+            </h1>
+          </div>
+        </div>
+      </div>
+    </section><section class="bg-green-50 py-20">
+        <h1 class="text-3xl font-bold text-center mb-10">Choose Your Trees</h1>
+        <div class="grid grid-cols-12 container mx-auto px-4 md:px-2">
+            <div class="col-span-12 lg:col-span-2 mb-8 lg:mb-0">
+                <div class="sticky top-10">
+                    <h1 class="text-xl px-2 font-bold">Categories</h1>
+                    <div class="px-2 py-5">
+                        <i class="ri-menu-2-line lg:hidden cursor-pointer text-2xl" id="toggle-btn"></i>
+                    </div>
+                    <div class="mt-2">
+                        <ul class="space-y-3 px-2 hidden lg:block" id="category-container"></ul>
+                    </div>
+                </div>
+            </div>
+            <div class="lg:col-span-8 col-span-12">
+                <div class="col-span-4 justify-center hidden" id="loader">
+                    <span class="loading loading-dots text-green-700 w-15 h-15 mx-auto"></span>
+                </div>
+                <div class="grid xl:grid-cols-3 md:grid-cols-2 grid-cols-1 p-2 gap-4" id="post-container"></div>
+            </div>
+            <div class="col-span-12 lg:col-span-2 mt-8 lg:mt-0">
+                <div class="sticky top-10 h-fit bg-white/50 rounded-md py-4">
+                    <h1 class="text-xl font-bold px-3">Your Cart</h1>
+                    <div class="py-5 space-y-4" id="cart-container"></div>
+                    <h1 class="font-bold text-lg px-3">
+                        Total : ৳
+                        <span id="total-price" class="font-bold text-lg text-black-600">0</span>
+                    </h1>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="py-16 px-6 bg-green-50">
+        <h2 class="text-3xl font-bold text-center mb-10">About the Campaign</h2>
+        <div class="max-w-5xl mx-auto grid md:grid-cols-2 gap-8 items-center">
+            <div>
+                <img src="assets/about.png" alt="Plant" class="rounded-xl shadow-md" />
+            </div>
+            <div>
+                <p class="text-gray-600 mb-4">
+                    Green Earth is a global tree plantation initiative dedicated to
+                    fighting climate change. Since our start, we've planted over 500,000
+                    trees worldwide. By joining our campaign, you help restore forests,
+                    create habitats for wildlife, and combat global warming.
+                </p>
+                <ul class="list-disc list-inside text-gray-700 space-y-2">
+                    <li>Restoration of natural habitats</li>
+                    <li>Improvement of air quality</li>
+                    <li>Support for local communities</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <script src="javaScript/main.js"></script>
 </body>
 
 </html>
