--- a/index.htm
+++ b/index.htm
@@ -168,6 +168,51 @@
             </div>
         </div>
     </section>
+    <section class="bg-green-100 py-16 px-6">
+        <div class="max-w-5xl mx-auto text-center">
+            <h2 class="text-2xl font-bold text-gray-800 mb-12">Our Impact</h2>
+            <div class="grid md:grid-cols-3 gap-6">
+                <div
+                    class="bg-white rounded-xl shadow p-8 hover:bg-green-300 hover:shadow-lg transition duration-300 cursor-pointer">
+                    <h3 class="text-3xl font-bold text-green-700">500K+</h3>
+                    <p class="text-gray-700 mt-2">Trees Planted</p>
+                </div>
+                <div
+                    class="bg-white rounded-xl shadow p-8 hover:bg-green-300 hover:shadow-lg transition duration-300 cursor-pointer">
+                    <h3 class="text-3xl font-bold text-green-700">120+</h3>
+                    <p class="text-gray-700 mt-2">Communities Involved</p>
+                </div>
+                <div
+                    class="bg-white rounded-xl shadow p-8 hover:bg-green-300 hover:shadow-lg transition duration-300 cursor-pointer">
+                    <h3 class="text-3xl font-bold text-green-700">30+</h3>
+                    <p class="text-gray-700 mt-2">Countries Reached</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="bg-green-800 py-16 px-6 text-center">
+        <h2 class="text-2xl font-bold text-white mb-6">Plant a Tree Today</h2>
+        <div class="max-w-md mx-auto bg-green-700 rounded-xl shadow p-8">
+            <form class="space-y-4">
+                <input type="text" placeholder="Your Name"
+                    class="w-full p-3 rounded-md border border-gray-300 focus:outline-none bg-white" />
+                <input type="email" placeholder="Your Email Address"
+                    class="w-full p-3 rounded-md border border-gray-300 focus:outline-none bg-white" />
+                <select class="w-full p-3 rounded-md border border-gray-300 focus:outline-non bg-white">
+                    <option>Number of Trees</option>
+                    <option>1</option>
+                    <option>5</option>
+                    <option>10</option>
+                    <option>20</option>
+                </select>
+                <button type="submit"
+                    class="w-full bg-yellow-400 hover:bg-yellow-500 text-green-900 font-semibold py-3 rounded-md shadow">
+                    Donate Now
+                </button>
+            </form>
+        </div>
+    </section>
+
     <script src="javaScript/main.js"></script>
 </body>
 
