--- a/index.htm
+++ b/index.htm
@@ -72,50 +72,38 @@
 
     <div class="" id="modal-container"></div>
     <section class="bg-green-50 py-20">
-      <h1 class="text-3xl font-bold text-center mb-10">Choose Your Trees</h1>
-      <div class="grid grid-cols-12 container mx-auto px-4 md:px-2">
-        <div class="col-span-12 lg:col-span-2 mb-8 lg:mb-0">
-          <div class="sticky top-10">
-            <h1 class="text-xl px-2 font-bold">Categories</h1>
-            <div class="px-2 py-5">
-              <i
-                class="ri-menu-2-line lg:hidden cursor-pointer text-2xl"
-                id="toggle-btn"
-              ></i>
+        <h1 class="text-3xl font-bold text-center mb-10">Choose Your Trees</h1>
+        <div class="grid grid-cols-12 container mx-auto px-4 md:px-2">
+            <div class="col-span-12 lg:col-span-2 mb-8 lg:mb-0">
+                <div class="sticky top-10">
+                    <h1 class="text-xl px-2 font-bold">Categories</h1>
+                    <div class="px-2 py-5">
+                        <i class="ri-menu-2-line lg:hidden cursor-pointer text-2xl" id="toggle-btn"></i>
+                    </div>
+                    <div class="mt-2">
+                        <ul class="space-y-3 px-2 hidden lg:block" id="category-container"></ul>
+                    </div>
+                </div>
             </div>
-            <div class="mt-2">
-              <ul
-                class="space-y-3 px-2 hidden lg:block"
-                id="category-container"
-              ></ul>
+            <div class="lg:col-span-8 col-span-12">
+                <div class="col-span-4 justify-center hidden" id="loader">
+                    <span class="loading loading-dots text-green-700 w-15 h-15 mx-auto"></span>
+                </div>
+                <div class="grid xl:grid-cols-3 md:grid-cols-2 grid-cols-1 p-2 gap-4" id="post-container"></div>
             </div>
-          </div>
+            <div class="col-span-12 lg:col-span-2 mt-8 lg:mt-0">
+                <div class="sticky top-10 h-fit bg-white/50 rounded-md py-4">
+                    <h1 class="text-xl font-bold px-3">Your Cart</h1>
+                    <div class="py-5 space-y-4" id="cart-container"></div>
+                    <h1 class="font-bold text-lg px-3">
+                        Total : ৳
+                        <span id="total-price" class="font-bold text-lg text-black-600">0</span>
+                    </h1>
+                </div>
+            </div>
         </div>
-        <div class="lg:col-span-8 col-span-12">
-          <div class="col-span-4 justify-center hidden" id="loader">
-            <span
-              class="loading loading-dots text-green-700 w-15 h-15 mx-auto"
-            ></span>
-          </div>
-          <div
-            class="grid xl:grid-cols-3 md:grid-cols-2 grid-cols-1 p-2 gap-4"
-            id="post-container"
-          ></div>
-        </div>
-        <div class="col-span-12 lg:col-span-2 mt-8 lg:mt-0">
-          <div class="sticky top-10 h-fit bg-white/50 rounded-md py-4">
-            <h1 class="text-xl font-bold px-3">Your Cart</h1>
-            <div class="py-5 space-y-4" id="cart-container"></div>
-            <h1 class="font-bold text-lg px-3">
-              Total : ৳
-              <span id="total-price" class="font-bold text-lg text-black-600"
-                >0</span
-              >
-            </h1>
-          </div>
-        </div>
-      </div>
-    </section><section class="bg-green-50 py-20">
+    </section>
+    <section class="bg-green-50 py-20">
         <h1 class="text-3xl font-bold text-center mb-10">Choose Your Trees</h1>
         <div class="grid grid-cols-12 container mx-auto px-4 md:px-2">
             <div class="col-span-12 lg:col-span-2 mb-8 lg:mb-0">
@@ -212,7 +200,9 @@
             </form>
         </div>
     </section>
-
+    <footer class="bg-green-900 text-center py-4 text-white text-sm">
+        © 2025 Green Earth. All Rights Reserved.
+    </footer>
     <script src="javaScript/main.js"></script>
 </body>
 
